fix footer on mobile and other tweaks

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -68,16 +68,18 @@
 
     margin-bottom: 100px;
 
-    p {
-      text-align: center;
-    }
-
     img {
       display: block;
       width: 150px;
       height: 150px;
       margin: auto;
       opacity: .8;
+    }
+
+    .description {
+      text-align: center;
+      margin-top: 50px;
+      margin-bottom: 50px;
     }
   }
 
