--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -16,6 +16,7 @@ body{
   line-height: 125% !important;
   background-color: $background_color;
   margin: 0px 0px;
+  min-height: 100vh;
 }
 
 /* FONT SCALE */
@@ -289,14 +290,23 @@ input[type=checkbox] {
 }
 
 
+#footer-spacer {
+  height: $footer_height;
+  margin-top: 40px;
+}
 
 #footer{
+  display: flex;
+  align-items: center;
   text-align: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
   color: $vlight_gray;
   font-style: italic;
-  padding: 1em 0;
-  margin-top: 4em;
   border-top: 1px solid $off_white;
+  height: $footer_height;
 }
 
 
